# vvpay

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt  run.py  setup.py
.streamlit/: config.toml
api/: InterAPICertificado.crt  InterAPIChave.key
app/: __init__.py  main.py
app/components/: __init__.py  status.py  upload.py  validation.py
app/styles/: theme.py
app/utils/: formatters.py
core/: __init__.py  config.py  exceptions.py  logging.py
core/interfaces/: __init__.py  base.py  repository.py  service.py
doc/: db.json  full_review.md  get_project_files.py  instructions.md  interapi.md  overview.md  steps.md
models/: __init__.py
models/db/: __init__.py  base.py  extraction.py  logs.py  meta.py  payment.py  validation.py
models/processing/: __init__.py  base.py  llm.py  states.py
models/service/: __init__.py  base.py  enums.py
repositories/: __init__.py  base.py  extraction.py  logs.py  meta.py  mixins.py  payment.py  validation.py
scripts/: invoice_processing_graph.py
services/: __init__.py  document_processor.py  inter_service.py  validation_service.py
tests/: conftest.py  test_inter_connection.py  test_inter_statement.py  test_llm_extraction.py  test_pix_payment_simple.py
tests/test_results/: pix_payment_test_20241029_104023.txt  pix_payment_test_20241029_104215.txt  pix_payment_test_20241029_104944.txt
utils/: __init__.py  db_utils.py  helpers.py  validators.py
