[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vvpay"
version = "1.0.0"
description = "PDF invoice processing system"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.0.0",
    "langchain>=0.0.350",
    "langchain-openai>=0.0.5",
    "pypdf>=3.17.0",
    "pdfminer.six>=20221105",
    "langgraph>=0.2.41"
]

[tool.setuptools]
packages = ["app", "core", "models", "repositories", "services", "utils"]